--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,5 @@
 version: '2'
 services:
-  mirakurun:
-    build:
-        context: mirakurun
-    container_name: mirakurun
-    privileged: true
-    ports:
-      - "40772:40772"
-    volumes:
-     - /etc/localtime:/etc/localtime:ro
-     - ./mirakurun/conf:/usr/local/etc/mirakurun
-     - ./mirakurun/db:/usr/local/var/db/mirakurun
 
   chinachu:
     build:
@@ -23,11 +12,11 @@ services:
      - "10772:10772"
      - "20772:20772"
      - "5353:5353/udp"
+    network_mode: "host"
     volumes:
      - /etc/localtime:/etc/localtime:ro
-     - ./chinachu/conf/config.json:/usr/local/chinachu/config.json
-     - ./chinachu/conf/rules.json:/usr/local/chinachu/rules.json
-     - ./chinachu/data:/usr/local/chinachu/data
-     - ./recorded:/usr/local/chinachu/recorded
-    links:
-     - mirakurun:container-mirakurun
+     - /data/chinachu/conf/config.json:/usr/local/chinachu/config.json
+     - /data/chinachu/conf/rules.json:/usr/local/chinachu/rules.json
+     - /data/chinachu/data:/usr/local/chinachu/data
+     - /data/chinachu/recorded:/usr/local/chinachu/recorded
+    restart: always
